app/assets/stylesheets/components/_testim.scss
/* cards */

#title {
  padding-top: 16px;
}

.container {
  width: 90%;
  margin: auto;
}

.tests {
  display: flex;
  justify-content: space-between;
  margin-bottom: 30px;
  padding-top: 8px;
}

.test {
  width: 32%;
  text-align: center;
  padding: 20px;
  border: 1px solid rgb(230,230,230);
  background-color: white;
}

#head {
  border-radius: 50%;
  width: 200px;
  height: 200px;
  padding-bottom: 24px;
}

